# sagumo

./: .env.sample  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  pyrefly.toml  requirements.txt  update.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  build_and_push.yml  codeql-analysis.yml  deploy.yml
cogs/: admin_cog.py  announce.py  dm_notification_config.py  error_handler.py  handle_inactive.py  handle_inactive.py.bak  help_command.py  help_command.py.bak  polling.py  polling.py.bak  reaction_agg_cog.py  reaction_aggregater.py  reaction_aggregater.py.bak  role_management.py  scheduler.py  staff_management.py  staff_management.py.bak  tweet.py
cogs/utils/: common.py  confirm.py  db.py  dm_notification_role_manager.py  inactive.py  polling_manager.py  reaction_aggregation_manager.py  setting_manager.py  sqlite_util.py  tweet_manager.py  user_manager.py
data/: reacrion.json
docker_setting/: Dockerfile  requirements.txt
